--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MobileTaskMgr</string>
+    <string name="tasks">Tasks</string>
+    <string name="name">Name</string>
+    <string name="description">Description</string>
 </resources>
